@@ -161,8 +161,7 @@ Please visit http://groups.google.com/group/python-twitter for more discussion.
 
 ==Contributors==
 
-Additional thanks to Pierre-Jean Coudert, Omar Kilani, Jodok Batlogg,
-and the rest of the python-twitter mailing list.
+Additional thanks to Pierre-Jean Coudert, Omar Kilani, Jodok Batlogg, edleaf,glen.tregoning, and the rest of the python-twitter mailing list.
 
 ==License==
 
